--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.4.4",
+    "chart.js": "^3.7.1",
+    "leaflet": "^1.7.1",
     "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "numeral": "^2.0.6",
+    "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
+    "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.5"
   },
   "devDependencies": {
     "eslint": "8.10.0",
